# psd

./: .gitignore  pyproject.toml
doc/: .gitignore  _quarto.yml  index.qmd  lif_fft.qmd  lif_rate_fft.qmd  lif_rate_welch.qmd  lif_welch.qmd  methods.qmd  ou.qmd  ou_fft.qmd  ou_fft_without_mean_substraction.qmd  plots.py  punit_fft.qmd  punit_long.qmd  punit_nperseg.qmd  punit_nperseg_fs.qmd  punit_rate_fft.qmd  punit_rate_welch.qmd  punit_vdent_fft.qmd  punit_vmem.qmd  punit_welch.qmd  punit_wihtout_adaptation_fft.qmd  punit_wihtout_refperiod_fft.qmd
psd/: __init__.py  p_unit.py  p_unit_jax.py  p_unit_numba.py  punit_model_numba.py  sim_config.py  spectral_methods.py
psd/lif/: lif.py
psd/ou/: __init__.py  ou.py
psd/punit/: fs_nperseg.py  long.py  model_jax.py  nperseg.py  p_unit_jax.py  p_unit_numba.py  punit_jax.py  punit_numba.py  punit_without_adaptation.py  punit_without_refperiod.py  vdend.py  vmem.py
psd/utils/: __init__.py  calculations.py  general.py  logging.py  plotstyle.py  setup_rich.py  spectral.py  white_noise.py
