[project]
name = "psd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda13]>=0.8.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nixio>=1.5.4",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "scipy>=1.16.3",
]

